objects/ASI_MFM_Payment_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_PO_Supplier_Name__c</fullName>
        <formula>ASI_MFM_PO_Line_Item__r.ASI_MFM_PO__r.ASI_MFM_Supplier_Name__r.Name</formula>
        <label>PO Supplier Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO</label>
        <referenceTo>ASI_MFM_PO__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Paid_Amount_in_Base_Currency__c</fullName>
        <label>Paid Amount in Base Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Paid_Amount_in_PO_Currency__c</fullName>
        <label>Paid Amount in PO Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Partial_Payment__c</fullName>
        <formula>IF(
AND( 
CONTAINS(RecordType.DeveloperName ,&quot;ASI_MFM_TH&quot;),
ASI_MFM_Payment_Amount__c &lt;  ASI_MFM_PO_Line_Remaining_Amount__c,
ASI_MFM_Payment__r.ASI_MFM_POSM_Deposit__c  =  False ,  ASI_MFM_Payment__r.ASI_MFM_POSM_Balance__c =  False ,
ASI_MFM_Complete_POL__c =  False
),
TRUE,
FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partial Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payee</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR (7 AND 8) OR 9 OR 10</booleanFilter>
            <errorMessage>Supplier does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>TW Supplier, ASI KR Supplier</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>HK Supplier, OPEX HK Supplier, CAP JP Supplier</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Supplier, HK Subleger</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>RM Supplier</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>GF Supplier</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>VN Supplier, Supplier (SG), MY Supplier, PH Supplier, ASI JP Supplier</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>TH Supplier, MFM TH Supplier</value>
            </filterItems>
            <filterItems>
                <field>Account.ASI_KOR_Customer_Code__c</field>
                <operation>contains</operation>
                <value>THS</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>OPEX SG Supplier, OPEX TH Supplier</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>TR Supplier</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Amount_Distributor__c</fullName>
        <label>Payment Amount (Distributor)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Amount_Net_of_Tax__c</fullName>
        <formula>ASI_MFM_Payment_Amount__c -  ASI_MFM_Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Amount Net of Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Amount_Ratio__c</fullName>
        <description>In order to make calculation more accurate, use amount field instead of amount net of tax</description>
        <formula>( ASI_MFM_Payment_Amount__c / ASI_MFM_Payment__r.ASI_MFM_Payment_Amount__c)</formula>
        <label>Payment Amount Ratio</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Item_Type__c</fullName>
        <label>Payment Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VAP</fullName>
                </value>
                <value>
                    <fullName>RNV</fullName>
                </value>
                <value>
                    <fullName>FRE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Line_Item_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Payment Line Item External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Line_Item_Finance_Verify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Verify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_List_Item_Description__c</fullName>
        <label>Payment List Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Status__c</fullName>
        <formula>TEXT(ASI_MFM_Payment__r.ASI_MFM_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Term__c</fullName>
        <formula>ASI_MFM_Payee__r.ASI_MFM_Payment_Terms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Type__c</fullName>
        <formula>TEXT(ASI_MFM_Payment__r.ASI_MFM_Payment_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>ASI_MFM_Payment__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Phase_Code__c</fullName>
        <label>Phase Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A00</fullName>
                </value>
                <value>
                    <fullName>A01</fullName>
                </value>
                <value>
                    <fullName>A02</fullName>
                </value>
                <value>
                    <fullName>A03</fullName>
                </value>
                <value>
                    <fullName>A04</fullName>
                </value>
                <value>
                    <fullName>A05</fullName>
                </value>
                <value>
                    <fullName>A06</fullName>
                </value>
                <value>
                    <fullName>A07</fullName>
                </value>
                <value>
                    <fullName>A08</fullName>
                </value>
                <value>
                    <fullName>A09</fullName>
                </value>
                <value>
                    <fullName>A10</fullName>
                </value>
                <value>
                    <fullName>A11</fullName>
                </value>
                <value>
                    <fullName>A12</fullName>
                </value>
                <value>
                    <fullName>A13</fullName>
                </value>
                <value>
                    <fullName>A14</fullName>
                </value>
                <value>
                    <fullName>A15</fullName>
                </value>
                <value>
                    <fullName>A16</fullName>
                </value>
                <value>
                    <fullName>A17</fullName>
                </value>
                <value>
                    <fullName>A18</fullName>
                </value>
                <value>
                    <fullName>A19</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_PlanNameText__c</fullName>
        <label>Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PlanText__c</fullName>
        <label>Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Line Item</label>
        <referenceTo>ASI_MFM_Plan_Line_Item__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Number</label>
        <referenceTo>ASI_MFM_Plan__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Print_Sequence__c</fullName>
        <label>Print Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Promotion_Month__c</fullName>
        <label>Promotion Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Receipt_but_no_Paid__c</fullName>
        <description>for CN MFM payment input page display only</description>
        <label>Receipt but no Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Recharge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recharge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Recipient_Name__c</fullName>
        <label>Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Reference_2__c</fullName>
        <description>F0911Z1 VNR2</description>
        <label>Reference 2</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Remark_2__c</fullName>
        <description>F0911Z1 VNALID</description>
        <label>Remark 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Remark_for_Suspense__c</fullName>
        <label>Remark for Suspense</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SC_Subledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subledger</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>HK Subleger</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>SC Payment Line Item</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>SC Payment Line Item</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Line Items (Subledger)</relationshipLabel>
        <relationshipName>Payment_SC_Subledger</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SKU_Code__c</fullName>
        <formula>ASI_MFM_PO_Line_Item__r.ASI_MFM_SKU_Code__r.ASI_MFM_SKU_Code__c</formula>
        <label>SKU Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SKU_Description__c</fullName>
        <label>SKU Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SKU__c</fullName>
        <label>SKU</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Status_Invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>change status to Invalid</description>
        <label>Status Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sys_Sync_Time__c</fullName>
        <label>Sys_Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_TH_Tax_Type__c</fullName>
        <label>Tax</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SVAT (7%)</fullName>
                    <default>true</default>
                    <label>SVAT (7%)</label>
                </value>
                <value>
                    <fullName>IVAT (7%)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Adjustment__c</fullName>
        <label>Tax Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Amount__c</fullName>
        <label>Deductable Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>ASI_MFM_Tax_Code__c</referenceTo>
        <relationshipLabel>Payment Line Items (Tax Code)</relationshipLabel>
        <relationshipName>Payment_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Confirmed_Cost__c</fullName>
        <formula>IF(CONTAINS( RecordType.DeveloperName, &apos;ASI_MFM_KR&apos;) , 
(
IF( ASI_MFM_Currency__c ==&apos;KRW&apos;,(
IF(  ISPICKVAL( ASI_MFM_Tax_Explanation_Code__c ,&apos;V&apos;),  
ASI_MFM_Payment_Amount__c ,  

 CASE(ASI_MFM_Tax_Code__r.Name, 
&apos;JG11&apos;,ASI_MFM_Payment_Amount__c * (1+ASI_MFM_Tax_Code__r.ASI_MFM_VAT_Rate__c),
&apos;JG10&apos;,ASI_MFM_Payment_Amount__c * (1+ASI_MFM_Tax_Code__r.ASI_MFM_VAT_Rate__c),
&apos;JF11&apos;,ASI_MFM_Payment_Amount__c * (1+ASI_MFM_Tax_Code__r.ASI_MFM_VAT_Rate__c),
&apos;JF10&apos;,ASI_MFM_Payment_Amount__c * (1+ASI_MFM_Tax_Code__r.ASI_MFM_VAT_Rate__c),

ASI_MFM_Payment_Amount__c)
)
),ASI_MFM_Payment_Amount__c
)
), ASI_MFM_Payment_Amount__c )</formula>
        <label>Distribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Explanation_Code__c</fullName>
        <label>Tax Explanation Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12%</fullName>
                </value>
                <value>
                    <fullName>0%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax__c</fullName>
        <formula>IF(CONTAINS( RecordType.DeveloperName, &apos;ASI_MFM_KR&apos;) , 
 ASI_MFM_Tax_Code__r.ASI_MFM_VAT_Rate__c 
, ASI_MFM_Payment__r.ASI_MFM_Tax_Code__r.ASI_MFM_VAT_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
                <value>
                    <fullName>Default Provision</fullName>
                </value>
                <value>
                    <fullName>Write-off</fullName>
                </value>
                <value>
                    <fullName>Company Transfer</fullName>
                    <isActive>false</isActive>
                    <label>Company Transfer</label>
                </value>
                <value>
                    <fullName>Default_Provision</fullName>
                    <isActive>false</isActive>
                    <label>Default_Provision</label>
                </value>
                <value>
                    <fullName>write off</fullName>
                    <isActive>false</isActive>
                    <label>write off</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_VAP_PO_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VAP PO Number</label>
        <referenceTo>ASI_MFM_PO__c</referenceTo>
        <relationshipLabel>Payment Line Items (VAP PO Number)</relationshipLabel>
        <relationshipName>Payment_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_VAT_Adjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <description>ASI_MFM_VAT_Adjustment__c</description>
        <label>VAT Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_VAT_Amount__c</fullName>
        <label>VAT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_VAT_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VAT Invoice</label>
        <referenceTo>ASI_MFM_VAT_Invoice__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Verify_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Verify by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PaymentLine_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Voucher_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voucher Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Web_Service_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web Service Failed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Where_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Where Customer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>KR Payment Line Item</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>KR Payment Line Item</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Venue (KR), Wholesaler (KR)</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.ASI_CRM_CN_Inactive_Flag__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Withholding_Tax_Amount__c</fullName>
        <label>Withholding Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Withholding_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Withholding Tax</label>
        <referenceTo>ASI_MFM_Tax_Code__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Payment Line Item</label>
    <nameField>
        <displayFormat>PYL{000000}</displayFormat>
        <label>Payment Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Line Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CAP_HK_Payment_Line_Item</fullName>
        <active>true</active>
        <label>CAP HK Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_JP_Payment_Line_Item</fullName>
        <active>true</active>
        <label>CAP JP Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_Payment_Line_Item</fullName>
        <active>true</active>
        <label>CAP Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_SG_Payment_Line_Item</fullName>
        <active>true</active>
        <label>CAP SG Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_TH_Payment_Line_Item</fullName>
        <active>true</active>
        <label>CAP TH Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_TW_Payment_Line_Item</fullName>
        <active>true</active>
        <label>CAP TW Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CN_Payment_Line_Item</fullName>
        <active>true</active>
        <label>CN Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_GF_Payment_Line_Item</fullName>
        <active>true</active>
        <label>GF Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_HK_Payment_Line_Item</fullName>
        <active>true</active>
        <label>HK Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_JP_Payment_Line_Item</fullName>
        <active>true</active>
        <label>JP Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_KR_Payment_Line_Item</fullName>
        <active>true</active>
        <label>KR Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_MKTEXP_HK_Payment_Line_Item</fullName>
        <active>true</active>
        <label>MKTEXP HK Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_MKTEXP_RM_Payment_Line_Item</fullName>
        <active>true</active>
        <label>MKTEXP RM Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_MKTEXP_TR_Payment_Line_Item</fullName>
        <active>true</active>
        <label>MKTEXP TR Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_MY_Payment_Line_Item</fullName>
        <active>true</active>
        <label>MY Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_PH_Payment_Line_Item</fullName>
        <active>true</active>
        <label>PH Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_RM_Payment_Line_Item</fullName>
        <active>true</active>
        <label>RM Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_SC_Payment_Line_Item</fullName>
        <active>true</active>
        <label>SC Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_SG_Payment_Line_Item</fullName>
        <active>true</active>
        <label>SG Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_TH_Payment_Line_Item</fullName>
        <active>true</active>
        <label>TH Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_TW_Payment_Line_Item</fullName>
        <active>true</active>
        <label>TW Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_VN_Payment_Line_Item</fullName>
        <active>true</active>
        <label>VN Payment Line Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_MFM_CAP_Accrual_Payment_BU_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
 CONTAINS( RecordType.DeveloperName , &quot;ASI_MFM_CAP_Payment_Line_Item&quot;),
 CONTAINS( ASI_MFM_PO_Line_Item__r.ASI_MFM_PO__r.RecordType.DeveloperName , &quot;ASI_MFM_CAP_Accrual&quot;),
NOT( ASI_MFM_BU__r.ASI_MFM_Available_for_Accrual_PO_Payment__c ),
 ISPICKVAL(  ASI_MFM_Payment__r.ASI_MFM_Payment_Type__c , &quot;OPEX&quot;) 
)</errorConditionFormula>
        <errorDisplayField>ASI_MFM_BU__c</errorDisplayField>
        <errorMessage>Please select OPEX Suspense BU for OPEX Payment on Accrual PO</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_CAP_Check_CAPEX_OPEX_AP_Code</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(RecordType.DeveloperName, &apos;ASI_MFM_CAP&apos;) 
&amp;&amp; ((ISPICKVAL(ASI_MFM_Payment__r.ASI_MFM_Payment_Type__c, &apos;CAPEX&apos;)&amp;&amp;  ASI_MFM_AP_Code__r.ASI_MFM_OPEX__c = TRUE) || (ISPICKVAL(ASI_MFM_Payment__r.ASI_MFM_Payment_Type__c, &apos;OPEX&apos;)&amp;&amp; ASI_MFM_AP_Code__r.ASI_MFM_OPEX__c = FALSE )) 
&amp;&amp; NOT(CONTAINS($Profile.Name, &quot;Administrator&quot;))</errorConditionFormula>
        <errorDisplayField>ASI_MFM_AP_Code__c</errorDisplayField>
        <errorMessage>For CAPEX payment, please select a CAPEX AP Code. For OPEX payment, please select an OPEX AP Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_CAP_Check_CAPEX_OPEX_Type</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(RecordType.DeveloperName, &apos;ASI_MFM_CAP&apos;) &amp;&amp;
((ISPICKVAL(ASI_MFM_Payment__r.ASI_MFM_Payment_Type__c, &apos;CAPEX&apos;)&amp;&amp; ASI_MFM_BU__r.ASI_MFM_OPEX__c = TRUE ) 
	|| (ISPICKVAL(ASI_MFM_Payment__r.ASI_MFM_Payment_Type__c, &apos;OPEX&apos;)&amp;&amp; ASI_MFM_BU__r.ASI_MFM_OPEX__c = FALSE )) &amp;&amp;
NOT(CONTAINS($Profile.Name, &quot;Administrator&quot;)) &amp;&amp; not(CONTAINS( $User.Username , &quot;soa&quot;))</errorConditionFormula>
        <errorDisplayField>ASI_MFM_BU__c</errorDisplayField>
        <errorMessage>For CAPEX payment, please select a CAPEX BU Code. For OPEX payment, please select an OPEX BU Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_CAP_HK_BU_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
 CONTAINS(RecordType.DeveloperName, &quot;ASI_MFM_CAP_Payment_Line_Item Layout&quot;),
 ISBLANK( ASI_MFM_BU__c ),
 ISBLANK( ASI_MFM_BU_Allocation__c )
)</errorConditionFormula>
        <errorMessage>Please select either BU Code or BU Allocation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_CAP_SG_PaymentAmount_Input</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName =&apos;ASI_MFM_CAP_SG_Payment_Line_Item&apos;  
&amp;&amp; NOT(ISPICKVAL(ASI_MFM_Payment_Item_Type__c, &apos;VAP&apos;))
&amp;&amp; (ASI_MFM_Payment_Amount__c = 0  || ISBLANK(ASI_MFM_Payment_Amount__c))</errorConditionFormula>
        <errorDisplayField>ASI_MFM_Payment_Amount__c</errorDisplayField>
        <errorMessage>Please input Payment Amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_CN_Check_Benchmark</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
CONTAINS( RecordType.DeveloperName, &apos;ASI_MFM_CN&apos;), !ASI_MFM_PO__r.ASI_MFM_PMO_Finished__c, !ASI_MFM_Payment__r.ASI_MFM_Pre_payment__c,
NOT(CONTAINS( $Profile.Name,&quot;System Admin&quot;))
)</errorConditionFormula>
        <errorMessage>PMO need to submit Benchmark report summary to PO before processing payment for image outlet/Out Channel Event/In Channel Event PO</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_Check_Against_PO_Receipt_Amount</fullName>
        <active>false</active>
        <description>MFM CN Validation: payment amount cannot be larger than po receipt amount (exclude Pre-payment)</description>
        <errorConditionFormula>AND( NOT(ASI_MFM_Payment__r.ASI_MFM_Pre_payment__c), 
CONTAINS( RecordType.DeveloperName, &apos;ASI_MFM_CN&apos;),  ( ASI_MFM_POL_Receipt_Amount_Incl_Tax__c +1 ) &lt;   ASI_MFM_Payment_Amount__c   )</errorConditionFormula>
        <errorMessage>Payment amount cannot be greater than PO receipt amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_Check_PO_Receipt_but_no_paid</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
CONTAINS( RecordType.DeveloperName, &apos;ASI_MFM_CN&apos;), ASI_MFM_Receipt_but_no_Paid__c &lt;  ASI_MFM_Payment_Amount_Net_of_Tax__c )</errorConditionFormula>
        <errorDisplayField>ASI_MFM_A_C_Code__c</errorDisplayField>
        <errorMessage>Payment amount cannot be greater than PO receipt but no paid amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_Finance_Voucher_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(CONTAINS(RecordType.DeveloperName , &quot;ASI_MFM_TH&quot;), ASI_MFM_Voucher_Created__c =true, ASI_MFM_Payment_Line_Item_Finance_Verify__c =false)</errorConditionFormula>
        <errorMessage>Voucher has created. You cannot clear Finance Verify flag</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_GF_DistributorPrePayValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
 CONTAINS( RecordType.DeveloperName , &quot;ASI_MFM_GF&quot;),
 ASI_MFM_Payment__r.ASI_MFM_Pre_payment__c ,
 NOT(ISBLANK(  ASI_MFM_PO_Line_Item__r.ASI_MFM_Distributor_Amount__c ))
)</errorConditionFormula>
        <errorMessage>Payment for Distributor cannot be made in Pre-Payment, please receipt the PO before making payment.</errorMessage>
    </validationRules>
</CustomObject>